[project]
name = "mbcp"
version = "0.1.0"
description = "A tool for Minecraft particle production"
authors = [
    {name = "snowykami", email = "snowykami@outlook.com"},
]
dependencies = [
    "numpy>=2.1.1",
    "liteyukibot>=6.3.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "translate>=3.6.1",
    "pytest>=8.3.2",
]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
include_packages = ["litedoc", "liteyukibot"]